--- a/gatsby-simplefolio/package.json
+++ b/gatsby-simplefolio/package.json
@@ -12,7 +12,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && cp -pvr public/* ../ && git add ../ && git commit -m 'Deploy to production' && git push"
+    "deploy": "git checkout master && git pull && git checkout -b deploy-to-production && gatsby build && cp -pvr public/* ../ && git add ../ && git commit -m 'Deploy to production' && git push"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
